Fix footer clipping issues Rename uploaded files based on md5

--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -1,3 +1,6 @@
+body {
+    padding-bottom: 60px;
+}
 p {
     font-family: 'Carlito', sans-serif;
 }
